--- a/index.html
+++ b/index.html
@@ -301,12 +301,12 @@
     </div>
   </a>
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
@@ -342,17 +342,17 @@
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">I provide clean and organized data entry services to help clients manage spreadsheets, databases, and records efficiently. Accuracy, speed, and consistency are always my top priorities in every project I take on.</p>
   <div class="portfolio-grid">
   <a href="https://docs.google.com/spreadsheets/d/11jkp98DLemuVSmAFpk55n0t6dQ1Ztmllt9KVqgYl5eE/edit?usp=sharing" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Thumbnail%20(Data%20Entry%201).png?raw=true" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
@@ -372,17 +372,17 @@
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">From handwritten notes to scanned PDFs, I offer fast and accurate typing services tailored to your formatting needs. Whether it's a few pages or large documents, I deliver neat and editable results with precision.</p>
   <div class="portfolio-grid">
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
@@ -402,17 +402,17 @@
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">With Canva Pro and strong design sense, I help clients craft visually appealing materials — from social media posts to business documents — aligned with their brand and purpose. Every design is editable and ready to use.</p>
   <div class="portfolio-grid">
   <a href="https://drive.google.com/file/d/1icwVFupSkcN4Ap2HEheTU-hdYg58dGn7/view?usp=sharing" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Thumbnail%20(Canva%201).png?raw=true" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
   <a href="https://drive.google.com/file/d/1Z0NVhPZmov7mesMRi38P0i4Rry1_v1iw/view?usp=sharing" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Thumbnail%20(Canva%202).png?raw=true" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
   <a href="https://drive.google.com/file/d/1Wmf3wmxKaqhm1IVpnEh54xqGGNXLKH-T/view?usp=sharing" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Thumbnail%20(Canva%203).png?raw=true" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
@@ -432,17 +432,17 @@
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">I offer setup and customization support for Telegram bots — useful for automation, client interaction, or task management. Whether it's command creation or flow setup, I help make your Telegram work smarter.</p>
   <div class="portfolio-grid">
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
@@ -462,17 +462,17 @@
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">Need to convert images, Word docs, or PDFs quickly and neatly? I deliver accurate file conversions, ensuring formatting is preserved and results are fully usable across platforms or apps.</p>
   <div class="portfolio-grid">
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
