--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
   <div style="margin-top: 2rem; display: flex; justify-content: center; gap: 1rem;">
     <button class="button-style" onclick="goBack()">Back</button>
     <a href="https://www.upwork.com/freelancers/~017cc75228354e54a8?viewMode=1" class="view-button" target="_blank">View Full Portfolio</a>
+    <button class="button-style" onclick="fadeBetweenSections('.portfolio', '.feedback')">Feedback</button>
   </div>
 </section>
 
