--- a/index.html
+++ b/index.html
@@ -337,6 +337,34 @@
   </div>
 </section>
 
+<section class="feedback" style="display: none; flex-direction: column; text-align: center; padding: 2rem; overflow-y: auto;">
+  <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">Feedback</h2>
+  <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">
+    I value feedback from everyone who visits my portfolio. Your thoughts help me grow and improve my work. Feel free to explore the feedback shared below!
+  </p>
+  <div class="portfolio-grid">
+    <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+      <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+        <img src="GAMBAR_AWAK.jpg" alt="Feedback 1" style="width: 100%; height: 100%; object-fit: cover;" />
+      </div>
+    </a>
+    <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+      <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+        <img src="GAMBAR_AWAK.jpg" alt="Feedback 1" style="width: 100%; height: 100%; object-fit: cover;" />
+      </div>
+    </a>
+    <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+      <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+        <img src="GAMBAR_AWAK.jpg" alt="Feedback 1" style="width: 100%; height: 100%; object-fit: cover;" />
+      </div>
+    </a>
+  </div>
+  <div style="margin-top: 2rem; display: flex; justify-content: center; gap: 1rem;">
+    <button class="button-style" onclick="fadeBetweenSections('.feedback', '.portfolio')">Back</button>
+    <a href="https://www.upwork.com/freelancers/~017cc75228354e54a8?viewMode=1" class="view-button" target="_blank">View Full Portfolio</a>
+  </div>
+</section>
+
 <!-- Data Entry Section -->
 <section class="data-entry" style="display: none; flex-direction: column; text-align: center; padding: 2rem; overflow-y: auto;">
   <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">Data Entry</h2>
