--- a/index.html
+++ b/index.html
@@ -344,23 +344,36 @@
   </p>
   <div style="width: 100%; overflow: hidden; position: relative; height: 160px;">
     <div style="display: flex; gap: 1rem; animation: scroll-right 30s linear infinite; width: max-content; will-change: transform;">
-      <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-        <img src="GAMBAR1.jpg" alt="Feedback 1" style="width: 100%; height: 100%; object-fit: cover;" />
-      </div>
-      <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-        <img src="GAMBAR2.jpg" alt="Feedback 2" style="width: 100%; height: 100%; object-fit: cover;" />
-      </div>
-      <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-        <img src="GAMBAR3.jpg" alt="Feedback 3" style="width: 100%; height: 100%; object-fit: cover;" />
-      </div>
-      <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-        <img src="GAMBAR4.jpg" alt="Feedback 4" style="width: 100%; height: 100%; object-fit: cover;" />
-      </div>
-      <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-        <img src="GAMBAR5.jpg" alt="Feedback 5" style="width: 100%; height: 100%; object-fit: cover;" />
-      </div>
-      <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-        <img src="GAMBAR6.jpg" alt="Feedback 6" style="width: 100%; height: 100%; object-fit: cover;" />
+      <!-- DUPLICATE GAMBAR UNTUK LOOP YANG SEMPURNA -->
+      <div style="display: flex; gap: 1rem;">
+        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+          <img src="GAMBAR1.jpg" alt="Feedback 1" style="width: 100%; height: 100%; object-fit: cover;" />
+        </div>
+        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+          <img src="GAMBAR2.jpg" alt="Feedback 2" style="width: 100%; height: 100%; object-fit: cover;" />
+        </div>
+        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+          <img src="GAMBAR3.jpg" alt="Feedback 3" style="width: 100%; height: 100%; object-fit: cover;" />
+        </div>
+        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+          <img src="GAMBAR4.jpg" alt="Feedback 4" style="width: 100%; height: 100%; object-fit: cover;" />
+        </div>
+        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+          <img src="GAMBAR5.jpg" alt="Feedback 5" style="width: 100%; height: 100%; object-fit: cover;" />
+        </div>
+        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+          <img src="GAMBAR6.jpg" alt="Feedback 6" style="width: 100%; height: 100%; object-fit: cover;" />
+        </div>
+        <!-- SALIN SEMULA GAMBAR UNTUK LOOP -->
+        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+          <img src="GAMBAR1.jpg" alt="Feedback 1 Duplicate" style="width: 100%; height: 100%; object-fit: cover;" />
+        </div>
+        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+          <img src="GAMBAR2.jpg" alt="Feedback 2 Duplicate" style="width: 100%; height: 100%; object-fit: cover;" />
+        </div>
+        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+          <img src="GAMBAR3.jpg" alt="Feedback 3 Duplicate" style="width: 100%; height: 100%; object-fit: cover;" />
+        </div>
       </div>
     </div>
   </div>
@@ -373,8 +386,6 @@
 <style>
 @keyframes scroll-right {
   0% { transform: translateX(-100%); }
-  100% { transform: translateX(100%); }
-}
   100% { transform: translateX(100%); }
 }
 </style>
