--- a/index.html
+++ b/index.html
@@ -343,37 +343,21 @@
     I value feedback from everyone who visits my portfolio. Your thoughts help me grow and improve my work. Feel free to explore the feedback shared below!
   </p>
   <div style="width: 100%; overflow: hidden; position: relative; height: 160px;">
-    <div style="display: flex; gap: 1rem; animation: scroll-right 30s linear infinite; width: max-content; will-change: transform;">
-      <!-- DUPLICATE GAMBAR UNTUK LOOP YANG SEMPURNA -->
-      <div style="display: flex; gap: 1rem;">
-        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-          <img src="GAMBAR1.jpg" alt="Feedback 1" style="width: 100%; height: 100%; object-fit: cover;" />
-        </div>
-        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-          <img src="GAMBAR2.jpg" alt="Feedback 2" style="width: 100%; height: 100%; object-fit: cover;" />
-        </div>
-        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-          <img src="GAMBAR3.jpg" alt="Feedback 3" style="width: 100%; height: 100%; object-fit: cover;" />
-        </div>
-        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-          <img src="GAMBAR4.jpg" alt="Feedback 4" style="width: 100%; height: 100%; object-fit: cover;" />
-        </div>
-        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-          <img src="GAMBAR5.jpg" alt="Feedback 5" style="width: 100%; height: 100%; object-fit: cover;" />
-        </div>
-        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-          <img src="GAMBAR6.jpg" alt="Feedback 6" style="width: 100%; height: 100%; object-fit: cover;" />
-        </div>
-        <!-- SALIN SEMULA GAMBAR UNTUK LOOP -->
-        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-          <img src="GAMBAR1.jpg" alt="Feedback 1 Duplicate" style="width: 100%; height: 100%; object-fit: cover;" />
-        </div>
-        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-          <img src="GAMBAR2.jpg" alt="Feedback 2 Duplicate" style="width: 100%; height: 100%; object-fit: cover;" />
-        </div>
-        <div style="min-width: 250px; height: 150px; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
-          <img src="GAMBAR3.jpg" alt="Feedback 3 Duplicate" style="width: 100%; height: 100%; object-fit: cover;" />
-        </div>
+    <div class="scrolling-track">
+      <!-- ULANGI GAMBAR UNTUK LOOP BERTERUSAN -->
+      <div class="scrolling-content">
+        <img src="GAMBAR1.jpg" alt="Feedback 1" />
+        <img src="GAMBAR2.jpg" alt="Feedback 2" />
+        <img src="GAMBAR3.jpg" alt="Feedback 3" />
+        <img src="GAMBAR4.jpg" alt="Feedback 4" />
+        <img src="GAMBAR5.jpg" alt="Feedback 5" />
+        <img src="GAMBAR6.jpg" alt="Feedback 6" />
+        <img src="GAMBAR1.jpg" alt="Feedback 1 Duplicate" />
+        <img src="GAMBAR2.jpg" alt="Feedback 2 Duplicate" />
+        <img src="GAMBAR3.jpg" alt="Feedback 3 Duplicate" />
+        <img src="GAMBAR4.jpg" alt="Feedback 4 Duplicate" />
+        <img src="GAMBAR5.jpg" alt="Feedback 5 Duplicate" />
+        <img src="GAMBAR6.jpg" alt="Feedback 6 Duplicate" />
       </div>
     </div>
   </div>
@@ -384,9 +368,30 @@
 </section>
 
 <style>
-@keyframes scroll-right {
-  0% { transform: translateX(-100%); }
-  100% { transform: translateX(100%); }
+.scrolling-track {
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+  height: 150px;
+}
+
+.scrolling-content {
+  display: flex;
+  gap: 1rem;
+  animation: scroll-loop 30s linear infinite;
+}
+
+.scrolling-content img {
+  min-width: 250px;
+  height: 150px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  object-fit: cover;
+}
+
+@keyframes scroll-loop {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
 }
 </style>
 
