--- a/index.html
+++ b/index.html
@@ -396,6 +396,11 @@
   align-items: center;
   justify-content: center;
   text-decoration: none;
+  transition: transform 0.3s ease;
+}
+
+.feedback-box:hover {
+  transform: scale(1.05);
 }
 
 .feedback-box img {
