--- a/index.html
+++ b/index.html
@@ -342,11 +342,11 @@
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">
     I value feedback from everyone who visits my portfolio. Your thoughts help me grow and improve my work. Feel free to explore the feedback shared below!
   </p>
-  <div style="width: 100%; overflow: hidden; position: relative; height: 180px;">
+  <div style="width: 100%; overflow: hidden; position: relative; height: 180px; padding: 0 1rem;">
     <div class="scrolling-track">
       <!-- ULANGI GAMBAR UNTUK LOOP BERTERUSAN -->
       <div class="scrolling-content">
-        <a href="LINK1" target="_blank" class="feedback-box"><img src="GAMBAR1.jpg" alt="Feedback 1" /></a>
+        <a href="LINK1" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%201.png?raw=true" alt="Feedback 1" /></a>
         <a href="LINK2" target="_blank" class="feedback-box"><img src="GAMBAR2.jpg" alt="Feedback 2" /></a>
         <a href="LINK3" target="_blank" class="feedback-box"><img src="GAMBAR3.jpg" alt="Feedback 3" /></a>
         <a href="LINK4" target="_blank" class="feedback-box"><img src="GAMBAR4.jpg" alt="Feedback 4" /></a>
@@ -383,6 +383,7 @@
   display: flex;
   gap: 1rem;
   animation: scroll-loop 30s linear infinite;
+  padding: 0 0.5rem;
 }
 
 .feedback-box {
@@ -396,17 +397,18 @@
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .feedback-box:hover {
   transform: scale(1.05);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.25);
 }
 
 .feedback-box img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
 }
 
