--- a/index.html
+++ b/index.html
@@ -342,19 +342,19 @@
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">
     I value feedback from everyone who visits my portfolio. Your thoughts help me grow and improve my work. Feel free to explore the feedback shared below!
   </p>
-  <div style="width: 100%; overflow: visible; position: relative; height: 220px; padding: 0 1.5rem;">
+  <div style="width: 100%; overflow: visible; position: relative; height: 180px; padding: 0 1.5rem;">
     <div class="scrolling-track">
       <!-- ULANGI GAMBAR UNTUK LOOP BERTERUSAN -->
       <div class="scrolling-content">
-        <a href="LINK1" target="_blank" class="feedback-box"><img src="GAMBAR1.jpg" alt="Feedback 1" /></a>
-        <a href="LINK2" target="_blank" class="feedback-box"><img src="GAMBAR2.jpg" alt="Feedback 2" /></a>
-        <a href="LINK3" target="_blank" class="feedback-box"><img src="GAMBAR3.jpg" alt="Feedback 3" /></a>
+        <a href="LINK1" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%201.png?raw=true" alt="Feedback 1" /></a>
+        <a href="LINK2" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%202.png?raw=true" alt="Feedback 2" /></a>
+        <a href="LINK3" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%203.png?raw=true" alt="Feedback 3" /></a>
         <a href="LINK4" target="_blank" class="feedback-box"><img src="GAMBAR4.jpg" alt="Feedback 4" /></a>
         <a href="LINK5" target="_blank" class="feedback-box"><img src="GAMBAR5.jpg" alt="Feedback 5" /></a>
         <a href="LINK6" target="_blank" class="feedback-box"><img src="GAMBAR6.jpg" alt="Feedback 6" /></a>
-        <a href="LINK1" target="_blank" class="feedback-box"><img src="GAMBAR1.jpg" alt="Feedback 1 Duplicate" /></a>
-        <a href="LINK2" target="_blank" class="feedback-box"><img src="GAMBAR2.jpg" alt="Feedback 2 Duplicate" /></a>
-        <a href="LINK3" target="_blank" class="feedback-box"><img src="GAMBAR3.jpg" alt="Feedback 3 Duplicate" /></a>
+        <a href="LINK1" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%201.png?raw=true" alt="Feedback 1 Duplicate" /></a>
+        <a href="LINK2" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%202.png?raw=true" alt="Feedback 2 Duplicate" /></a>
+        <a href="LINK3" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%203.png?raw=true" alt="Feedback 3 Duplicate" /></a>
         <a href="LINK4" target="_blank" class="feedback-box"><img src="GAMBAR4.jpg" alt="Feedback 4 Duplicate" /></a>
         <a href="LINK5" target="_blank" class="feedback-box"><img src="GAMBAR5.jpg" alt="Feedback 5 Duplicate" /></a>
         <a href="LINK6" target="_blank" class="feedback-box"><img src="GAMBAR6.jpg" alt="Feedback 6 Duplicate" /></a>
@@ -376,7 +376,7 @@
   display: flex;
   width: 100%;
   overflow: visible;
-  height: 200px;
+  height: 150px;
 }
 
 .scrolling-content {
@@ -389,8 +389,8 @@
 
 .feedback-box {
   min-width: 260px;
-  height: 180px;
-  border-radius: 12px;
+  height: 150px;
+  border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   background-color: #ffffff;
