--- a/index.html
+++ b/index.html
@@ -349,15 +349,15 @@
         <a href="LINK1" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%201.png?raw=true" alt="Feedback 1" /></a>
         <a href="LINK2" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%202.png?raw=true" alt="Feedback 2" /></a>
         <a href="LINK3" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%203.png?raw=true" alt="Feedback 3" /></a>
-        <a href="LINK4" target="_blank" class="feedback-box"><img src="GAMBAR4.jpg" alt="Feedback 4" /></a>
-        <a href="LINK5" target="_blank" class="feedback-box"><img src="GAMBAR5.jpg" alt="Feedback 5" /></a>
-        <a href="LINK6" target="_blank" class="feedback-box"><img src="GAMBAR6.jpg" alt="Feedback 6" /></a>
+        <a href="LINK4" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%204.png?raw=true" alt="Feedback 4" /></a>
+        <a href="LINK5" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%205.png?raw=true" alt="Feedback 5" /></a>
+        <a href="LINK6" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%206.png?raw=true" alt="Feedback 6" /></a>
         <a href="LINK1" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%201.png?raw=true" alt="Feedback 1 Duplicate" /></a>
         <a href="LINK2" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%202.png?raw=true" alt="Feedback 2 Duplicate" /></a>
         <a href="LINK3" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%203.png?raw=true" alt="Feedback 3 Duplicate" /></a>
-        <a href="LINK4" target="_blank" class="feedback-box"><img src="GAMBAR4.jpg" alt="Feedback 4 Duplicate" /></a>
-        <a href="LINK5" target="_blank" class="feedback-box"><img src="GAMBAR5.jpg" alt="Feedback 5 Duplicate" /></a>
-        <a href="LINK6" target="_blank" class="feedback-box"><img src="GAMBAR6.jpg" alt="Feedback 6 Duplicate" /></a>
+        <a href="LINK4" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%204.png?raw=true" alt="Feedback 4 Duplicate" /></a>
+        <a href="LINK5" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%205.png?raw=true" alt="Feedback 5 Duplicate" /></a>
+        <a href="LINK6" target="_blank" class="feedback-box"><img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Feedback%206.png?raw=true" alt="Feedback 6 Duplicate" /></a>
       </div>
     </div>
   </div>
